Revert "Feature api test (#97)" (#98)
This reverts commit 67edce1fe7d66512aeed52146a2eb5a6df9b4379.