@@ -18,6 +18,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -162,7 +163,7 @@ public class ProgramRegistrationService {
         return programRegistrationRepository.findAll()
                 .stream()
                 .map(this::mapToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
@@ -190,7 +191,7 @@ public class ProgramRegistrationService {
         return programRegistrationRepository.findByProgramProgramId(programId)
                 .stream()
                 .map(this::mapToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
@@ -201,7 +202,7 @@ public class ProgramRegistrationService {
         return programRegistrationRepository.findByUserUserId(userId)
                 .stream()
                 .map(this::mapToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
@@ -239,9 +240,7 @@ public class ProgramRegistrationService {
                                     programId,
                                     userId
                             );
-                            return new ResourceNotFoundException(
-                                    "Registration not found for program id: "
-                                            + programId + " and user id: " + userId
+                            return new ResourceNotFoundException("Registration not found for program id: " + programId + " and user id: " + userId
                             );
                         });
 
@@ -276,6 +275,7 @@ public class ProgramRegistrationService {
 
         return programRegistrationRepository.countByProgramProgramId(programId);
     }
+
 
     private ProgramRegistrationResponseDTO mapToResponseDTO(
             ProgramRegistration registration) {
